# harness-lab

./: .gitignore  README.md  pyproject.toml
docs/: abc_build.md  backend_science_plan.md  big_bang.md  bootstrap_snapshot.md  budget.md  code_change_brief.md  datasets.md  diagnosis_schema.md  diversity.md  evidence.md  execution_plan.md  external_review.md  hardware.md  hindsight.md  initial_harness_modularization.md  lab_responses.json  llm_integration_tiers.md  loop.md  memory_index.md  meta_harness_import_log.md  next_change.md  outcome_schema.md  parent_synthesis.md  policy.md  project_plan.md  proposal_schema.md  publishing.md  reconciliation.md  runner.md  simulation.md  workspace_layout.md
scripts/: advance_loop.py  big_bang.py  big_bang_ctl.sh  bootstrap_abc_dataset.py  build_abc_dataset.py  build_bootstrap_snapshot.py  build_budget.py  build_diversity.py  build_external_review.py  build_hindsight.py  build_memory_index.py  build_policy.py  claude_external_review.sh  create_candidate.py  draft_proposal.py  ensure_abc_ready.py  example_command_backend.py  import_mesh_para_dataset.py  plan_execution.py  publish_lab.py  reconcile_diagnosis.py  refresh_backend_profile.py  refresh_hardware.py  register_dataset.py  remote_command_backend.py  repo_command_backend.py  reset_lab.py  run_candidate.py  run_lab.py  seed_local_abc_archives.py  simulate_outcome.py  synthesize_parents.py  update_diagnosis.py  update_outcome.py
tests/: test_autonomous_mutation_gate.py  test_backend_code_map.py  test_backend_module_summary.py  test_big_bang.py  test_budget_throughput.py  (+27 more)
(+38 files in other folders)
