[project]
name = "harness-lab"
version = "0.1.0"
description = "Meta-Harness oriented research lab scaffolding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
